WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72261
Web Inspector: [Crash] Crash when inspecting namespaced SVG styled via element names
https://bugs.webkit.org/show_bug.cgi?id=72261
Summary
Web Inspector: [Crash] Crash when inspecting namespaced SVG styled via elemen...
Alexander Pavlov (apavlov)
Reported
2011-11-14 05:37:03 PST
What steps will reproduce the problem? 1. Open SVG file 2. Close Inspecting/Developer console if it is opened 3. Right mouse click on the red square 4. Select the 'Inspect element' item from the context menu What is the expected result? Displaying the source code in the console and highlighting the corresponding areas in the browser What happens instead? There is 'Aw, Snap!' message in the active tab. But console still displays the content. Please provide any additional information below. Attach a screenshot if possible. This is my test case: <?xml version='1.0' encoding='utf-8'?> <svg:svg xmlns:svg="
http://www.w3.org/2000/svg
" version="1.1"> <svg:defs> <svg:style type="text/css"> rect {fill: red} </svg:style> </svg:defs> <svg:rect width="100" height="100"/> </svg:svg> When that namespace is removed, it works properly. Otherwise it fails on any element name which is namespaced, but defined without the namespace in the style element. Works fine also when F12 is pressed instead of the mouse click event. Originally found in 17.0.932.0 dev channel but reproduced also in the current stable 15.0.874.120 version. Upstreaming
http://code.google.com/p/chromium/issues/detail?id=103942
Attachments
Patch
(4.33 KB, patch)
2011-11-14 06:59 PST
,
Alexander Pavlov (apavlov)
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2011-11-14 06:59:26 PST
Created
attachment 114939
[details]
Patch
Alexander Pavlov (apavlov)
Comment 2
2011-11-15 01:32:33 PST
Committed
r100251
: <
http://trac.webkit.org/changeset/100251
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug