Web Inspector: [Crash] Crash when inspecting namespaced SVG styled via element names https://bugs.webkit.org/show_bug.cgi?id=72261

Reviewed by Pavel Feldman.

Source/WebCore:

Test: inspector/styles/svg-style.xhtml

* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyleSheet::inlineStyleSheetText):

LayoutTests:

* inspector/styles/svg-style-expected.txt: Added.
* inspector/styles/svg-style.xhtml: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@100251 bbb929c8-8fbe-4397-9dbb-9b2b20218538